--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.application.name=user
 
+#Datos para traer la configuracion
+spring.cloud.config.uri=http://localhost:2222
+spring.config.import=optional:configserver:
+
+server.port=7777
+spring.jpa.show-sql=true
+
+spring.devtools.restart.enabled=false
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+
+#Permite conocer los endpoints
+logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
