--- a/event-service/src/main/resources/application.properties
+++ b/event-service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring:
+  data:
+    mongodb:
+      uri: mongodb+srv://root:root@cluster0.u6ivd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+  datasource:
+    driver-class-name: mongodb.jbcd.MongoDriver
