Updated entity event

--- a/event-service/src/main/resources/application.properties
+++ b/event-service/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb+srv://root:root@cluster0.u6ivd.mongodb.net/holi?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://root:root@cluster0.u6ivd.mongodb.net/events?retryWrites=true&w=majority
