--- a/event-service/pom.xml
+++ b/event-service/pom.xml
@@ -17,6 +17,13 @@
         <java.version>16</java.version>
         <spring-cloud.version>2020.0.3</spring-cloud.version>
     </properties>
+    <repositories>
+        <repository>
+          <id>jcenter-snapshots</id>
+          <name>jcenter</name>
+          <url>https://jcenter.bintray.com/</url>
+        </repository>
+    </repositories>
     <dependencies>
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
@@ -71,6 +78,12 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <!-- Swagger UI -->
+        <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-ui</artifactId>
+                <version>1.2.32</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
