--- a/event-service/pom.xml
+++ b/event-service/pom.xml
@@ -85,6 +85,12 @@
                 <artifactId>springdoc-openapi-ui</artifactId>
                 <version>1.2.32</version>
         </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.2.0.Final</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
